<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DownloadManager</string>
    <string name="DownloadLinesButtonIconDesc">DownloadLinesButtonIconDesc</string>
    <string name="SettingsButtonIconDesc">SettingsButtonIconDesc</string>
    <string name="DownloadsButtonIconDesc">DownloadsButtonIconDesc</string>
    <string name="TimingsButtonIconDesc">TimingsButtonIconDesc</string>
    <string name="StartDownloadButtonIconDesc">StartDownloadButtonIconDesc</string>
    <string name="UserIconDescription">UserIconDescription</string>
    <string name="UserGreetDefault">سلام کاربر گرامی!</string>
    <string name="UserGreetWithName">کاربر عزیز %1$s</string>
    <string name="UserGreet2">به نرم افزار مدیریت دانلود خوش آمدید.</string>
    <string name="MenuDescription">MenuDescription</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloadItemName">موزیک پلیر</string>
    <string name="downloadItemStatusText">درحال دانلود شده</string>
    <string name="DownloadItemPercentageText">%1$s &#8453;</string>
    <string name="DownloadFirstAction">DownloadFirstAction</string>
    <string name="DownloadSecondAction">DownloadSecondAction</string>
    <string name="DownloadSpeedText">2MB/S</string>
    <string name="DownloadFileSizeText">2MB</string>
    <string name="DownloadedFileSizeText">1.6MB</string>
    <string name="DownloadsListTitleText">دانلود ها</string>
    <string name="LineItemNameHolder">نام صف</string>
    <string name="LineItemDescription"> تعداد : %1$s</string>
    <string name="LineItemActionsDescription">عملیات های صف</string>
    <string name="TimingItemNameHolder">نام زمانبندی</string>
    <string name="TimingItemDateCreated">تاریخ ایجاد در %1$s ساعت %2$s</string>
    <string name="TimingItemActionsDescription">عملیات های زمانبندی</string>
    <string name="SubmitButtonText">ثبت</string>
    <string name="AcceptButtonText">تایید</string>
    <string name="EditButtonText">ویرایش</string>
    <string name="DrawerEnterText">ورود</string>
    <string name="DrawerExitText">خروج</string>
    <string name="DrawerRegisterText">ثبت نام</string>
    <string name="DrawerBuySubscriptionText">خرید اشتراک</string>
    <string name="RegisterNameInputHint">نام</string>
    <string name="RegisterLastNameInputHint">نام خانوادگی</string>
    <string name="RegisterEmailInputHint">ایمیل</string>
    <string name="RegisterPasswordInputHint">رمزعبور</string>
    <string name="RegisterRepeatPasswordInputHint">تکرار رمزعبور</string>
    <string name="DownloadLinkLinkInputHint">لینک مورد نظر</string>
    <string name="SuccessFullDatabaseInsert">اطلاعات با موفقیت ثبت شد</string>
    <string name="LoginEmailInputHint">ایمیل</string>
    <string name="LoginPasswordInputHint">رمزعبور</string>
    <string name="UserSharedPreferenceName">UserSharedPreferenceName</string>
    <string name="DownloadTimingsListTitleText">زمانبندی ها</string>
    <string name="NoDataFound">هیچ داده ای یافت نشد</string>
    <string name="AddTimingFloatButtonContentDescription">افزودن زمانبندی</string>
    <string name="AddTimingIdInputHint">شناسه زمانبندی</string>
    <string name="AddTimingNameInputHint">نام زمانبندی</string>
    <string name="AddTimingTypeInputHint">نوع دانلود</string>
    <string name="AddTimingStartupDownloadCheckHint">شروع دانلودها در زمان شروع برنامه</string>
    <string name="AddTimingStartDateInputHint">تاریخ شروع</string>
    <string name="AddTimingStartTimeInputHint">زمان شروع</string>
    <string name="AddTimingEndTimeInputHint">زمان پایان</string>
    <string name="AddTimingDailyDownloadInputHint">دانلود روزانه</string>
    <string name="AddTimingRetryCountInputHint">تعداد دفعات تلاش برای دانلود</string>
    <string name="AddTimingRestrictSpeedInputHint">محدود کننده سرعت</string>
    <string name="AddTimingDownloadSpeedInputHint">سرعت دانلود (B/s)</string>
    <string name="AddTimingDisconnectInternetInputHint">در پایان دانلود ها اینترنت را قطع
        کن</string>
    <string name="AddTimingCloseIDMInputHint">بعد از اتمام دانلود ها نرم افزار را ببند</string>
    <string name="AddTimingCloseAllAppsInputHint">بعد از اتمام دانلود ها تمام برنامه ها را
        ببند</string>
    <string name="AddTimingShutdownInputHint">بعد از اتمام دانلود ها دستگاه را خاموش کن</string>
    <string name="AddTimingEmptyIdError">شناسه زمانبندی نمی تواند خالی باشد</string>
    <string name="AddTimingEmptyNameError">نام زمانبندی نمی تواند خالی باشد</string>
    <string name="AddTimingEmptyTypeError">نوع زمانبندی نمی تواند خالی باشد</string>
    <string name="InsertTimingSuccessMessage">زمانبندی با موفقیت ثبت شد</string>
    <string name="DeleteTimingSuccessMessage">زمانبندی با موفقیت حذف شد</string>
    <string-array name="AddTimingTypesArray">
        <item>دانلود هم زمان</item>
        <item>سینک کردن متناوب</item>
    </string-array>
    <string name="AddLineFloatButtonContentDescription">افزودن صف</string>
    <string name="DownloadLinesListTitleText">صف ها</string>
    <string name="EditLineIdInputHint">شناسه صف</string>
    <string name="AddLineNameInputHint">نام صف</string>
    <string name="AddLinesTimingInputHint">زمانبندی مربوط صف</string>
    <string name="AddLinesNameInputNullError">نام صف نمی تواند خالی باشد</string>
    <string name="AddLineSuccessMessage">صف دانلود با موفقیت ثبت شد</string>
    <string name="AddLineIdInputNullError">شناسه صف نمیتواند خالی باشد</string>
    <string name="EditLineSuccessText">ویرایش صف با موفقیت انجام شد</string>
    <string name="HourTemplate">%1$s : %2$s</string>
    <string name="DateTemplate">%1$s / %2$s / %3$s</string>
    <string-array name="CustomViewsSpinnerItemsArray">
        <item>ویرایش</item>
        <item>حذف</item>
    </string-array>
    <string-array name="DownloadLinesSpinnerItemsArray">
        <item>شروع صف</item>
        <item>ویرایش</item>
        <item>حذف</item>
    </string-array>
    <string name="InsertDownloadLineSuccessMessage">صف دانلود با موفقیت ثبت شد</string>
    <string name="DeleteDownloadLineSuccessMessage">صف دانلود با موفقیت حذف شد</string>
    <string name="DownloadLinkFileNameInputHint">نام فایل</string>
    <string name="DownloadLinkFileTypeInputHint">نوع فایل</string>
    <string name="DownloadLinkFileSizeInputHint">حجم فایل</string>
    <string name="DownloadLinkDownloadLineSelectInputHint">صف مورد نظر</string>
    <string name="DownloadLinkStartButtonText">شروع</string>
    <string name="DownloadLinkLaterStartButtonText">بعدا دانلود شود</string>
    <string name="AddDownloadFloatActionButtonContentDescription">افزودن دانلود</string>
    <string name="AddDownloadSuccessMessage">دانلود با موفقیت اضافه شد</string>
    <string name="NotificationChannelName">Download Manager Notifications</string>
    <string name="NotificationChannelDescription">Notification Channel For Download Manager
    App Notifications</string>
</resources>