<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <View
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:background="@color/main_blue"
            android:layout_margin="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingIdInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/EditTimingIdInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="text"
            android:enabled="false"
            android:textDirection="rtl"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingNameInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingNameInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="text" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp">

            <Spinner
                android:id="@+id/AddTimingTypeInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/AddTimingTypeInputHint"
                android:layoutDirection="rtl"
                android:textDirection="rtl" />
        </RelativeLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingStartDownloadAtStartup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingStartupDownloadCheckHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingStartTimeInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingStartDateInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="datetime" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingStartTimeInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingStartTimeInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="time" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingEndTimeInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingEndTimeInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="datetime" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingDailyDownloadCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingDailyDownloadInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingRetryCountInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingRetryCountInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="number" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingSpeedRestrictionCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingRestrictSpeedInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/AddTimingDownloadSpeedInputHint"
            android:textColorHint="@color/main_blue"
            android:id="@+id/AddTimingDownloadSpeedInput"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints=""
            android:inputType="number" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingDisconnectInternetCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingDisconnectInternetInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingCloseIdmCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingCloseIDMInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingCloseAppsCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingCloseAllAppsInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/AddTimingShutdownCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/AddTimingShutdownInputHint"
            android:layoutDirection="rtl"
            android:checked="false"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/main_blue"
            android:layout_gravity="start"
            android:text="@string/SubmitButtonText"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:id="@+id/AddTimingButton"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/main_blue"
            android:layout_gravity="start"
            android:text="@string/EditButtonText"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:id="@+id/EditTimingButton"
            android:visibility="gone"
            />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>